# vendor_payout_and_penalty_automation

./: .env.example  .gitignore  AGENTS.md  README.md  add_redash_comments_to_tracking_json.py  build_penalty_dataset.py  enrich_cab_delay_reasons.py  extract_tracking_reports.py  main.py  pyproject.toml  redash_call_comments.py
backend/app/: __init__.py  main.py  models.py
backend/app/agents/: __init__.py  evidence.py  graphs.py  langchain_model.py  llm.py  models.py  orchestrator.py  policy.py  portfolio.py  runner.py  source_alignment.py  specialists.py  state.py  tools.py
backend/app/cli/: __init__.py  add_redash_comments_to_tracking_json.py  build_penalty_dataset.py  enrich_cab_delay_reasons.py  extract_tracking_reports.py  main.py
backend/app/core/: __init__.py  env.py  paths.py  tracking_utils.py
backend/app/domain/: __init__.py  cab_delay_enrichment.py  category_processors.py  complaint_message.py  extra_money_taken.py  fulfillment_not_done.py  lower_category_vehicle.py  (+3 more)
backend/tests/: factories.py  test_agent_llm.py  test_api.py  test_azure_openai_client.py  test_category_processors.py  test_complaint_message.py  test_edit_cases.py  test_langgraph_graph.py  test_package_builder.py  test_penalty_dataset.py  test_pipeline.py  test_project_structure.py  test_redash_call_comments.py  test_subcategories.py
data/demo/: README.md  expected_agentic_loss_recovery_output.xlsx  qliksense_dump.xlsx  tracking_reports_by_booking.json
docs/: agent-playbook.md  langgraph.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  styles.css
(+54 files in other folders)
