[project]
name = "agentathon"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.137.2",
    "httpx>=0.28.1",
    "openpyxl>=3.1.5",
    "pandas>=3.0.3",
    "pymysql>=1.2.0",
    "pytest>=9.1.0",
    "python-multipart>=0.0.32",
    "uvicorn[standard]>=0.49.0",
]

[tool.pytest.ini_options]
pythonpath = [
    ".",
]
